--- a/css/transportation.css
+++ b/css/transportation.css
@@ -444,7 +444,7 @@ footer{
 	background-color: white;
 }
 
-.content{
+footer .content{
 	padding: 20px 0;
 	width: 90%;
 	height: auto;
@@ -655,6 +655,10 @@ footer .copyrights{
 
 	#map{
 		height: 400px;
+	}
+
+	footer .content{
+		width: 100%;
 	}
 
 	footer .copyrights{
